z-index fix for navbar vs lightbox

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -394,7 +394,7 @@ input[type="submit"],
 //   box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
   width: 100%;
   height:60px;
-//   z-index: 1;
+//   z-index: 2;
  
 }
 
@@ -735,7 +735,7 @@ body.dark * {
 
 // Header
 
-.headroom{z-index: 1 !important;}
+.headroom{z-index: 2 !important;}
 .headroom {
   will-change: transform;
   position: fixed;
